--- a/streamia/movies.plist
+++ b/streamia/movies.plist
@@ -2,37 +2,136 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>movies</key>
+	<key>collections</key>
 	<array>
 		<dict>
-			<key>poster_16_9</key>
-			<string>ghost_in_the_shell_16_9</string>
-			<key>poster_4_3</key>
-			<string>ghost_in_the_shell_4_3</string>
 			<key>title</key>
-			<string>Ghost In The Shell</string>
-			<key>lenght</key>
-			<integer>105</integer>
+			<string>Featured</string>
+			<key>items</key>
+			<array>
+				<dict>
+					<key>mediaURL</key>
+					<string>http://movietrailers.apple.com/movies/universal/thefastandthefurious/thefastandthefurious15th-tlr1_h480p.mov</string>
+					<key>poster_16_9</key>
+					<string>fast_and_furious_16_9</string>
+					<key>poster_4_3</key>
+					<string>fast_and_furious_3_4</string>
+					<key>title</key>
+					<string>Fast and Furious</string>
+					<key>lenght</key>
+					<integer>105</integer>
+				</dict>
+				<dict>
+					<key>mediaURL</key>
+					<string>http://movietrailers.apple.com/movies/wb/madmaxfuryroad/madmax-tlr3_h480p.mov</string>
+					<key>poster_16_9</key>
+					<string>mad_max_16_9</string>
+					<key>poster_4_3</key>
+					<string>mad_max_4_3</string>
+					<key>title</key>
+					<string>Mad Max</string>
+					<key>lenght</key>
+					<integer>105</integer>
+				</dict>
+				<dict>
+					<key>mediaURL</key>
+					<string>http://movietrailers.apple.com/movies/paramount/ghost-in-the-shell/ghost-in-the-shell-trailer-1_480p.mov</string>
+					<key>poster_16_9</key>
+					<string>ghost_in_the_shell_16_9</string>
+					<key>poster_4_3</key>
+					<string>ghost_in_the_shell_4_3</string>
+					<key>title</key>
+					<string>Ghost In The Shell</string>
+					<key>lenght</key>
+					<integer>105</integer>
+				</dict>
+			</array>
 		</dict>
 		<dict>
-			<key>poster_16_9</key>
-			<string>mad_max_16_9</string>
-			<key>poster_4_3</key>
-			<string>mad_max_4_3</string>
 			<key>title</key>
-			<string>Mad Max</string>
-			<key>lenght</key>
-			<integer>105</integer>
+			<string>Action</string>
+			<key>items</key>
+			<array>
+				<dict>
+					<key>mediaURL</key>
+					<string>http://movietrailers.apple.com/movies/universal/thefastandthefurious/thefastandthefurious15th-tlr1_h480p.mov</string>
+					<key>poster_16_9</key>
+					<string>fast_and_furious_16_9</string>
+					<key>poster_4_3</key>
+					<string>fast_and_furious_3_4</string>
+					<key>title</key>
+					<string>Fast and Furious</string>
+					<key>lenght</key>
+					<integer>105</integer>
+				</dict>
+				<dict>
+					<key>mediaURL</key>
+					<string>http://movietrailers.apple.com/movies/wb/madmaxfuryroad/madmax-tlr3_h480p.mov</string>
+					<key>poster_16_9</key>
+					<string>mad_max_16_9</string>
+					<key>poster_4_3</key>
+					<string>mad_max_4_3</string>
+					<key>title</key>
+					<string>Mad Max</string>
+					<key>lenght</key>
+					<integer>105</integer>
+				</dict>
+				<dict>
+					<key>mediaURL</key>
+					<string>http://movietrailers.apple.com/movies/paramount/ghost-in-the-shell/ghost-in-the-shell-trailer-1_480p.mov</string>
+					<key>poster_16_9</key>
+					<string>ghost_in_the_shell_16_9</string>
+					<key>poster_4_3</key>
+					<string>ghost_in_the_shell_4_3</string>
+					<key>title</key>
+					<string>Ghost In The Shell</string>
+					<key>lenght</key>
+					<integer>105</integer>
+				</dict>
+			</array>
 		</dict>
 		<dict>
-			<key>poster_16_9</key>
-			<string>fast_and_furious_16_9</string>
-			<key>poster_4_3</key>
-			<string>fast_and_furious_3_4</string>
 			<key>title</key>
-			<string>Fast and Furious</string>
-			<key>lenght</key>
-			<integer>105</integer>
+			<string>Adventure</string>
+			<key>items</key>
+			<array>
+				<dict>
+					<key>mediaURL</key>
+					<string>http://movietrailers.apple.com/movies/universal/thefastandthefurious/thefastandthefurious15th-tlr1_h480p.mov</string>
+					<key>poster_16_9</key>
+					<string>fast_and_furious_16_9</string>
+					<key>poster_4_3</key>
+					<string>fast_and_furious_3_4</string>
+					<key>title</key>
+					<string>Fast and Furious</string>
+					<key>lenght</key>
+					<integer>105</integer>
+				</dict>
+				<dict>
+					<key>mediaURL</key>
+					<string>http://movietrailers.apple.com/movies/wb/madmaxfuryroad/madmax-tlr3_h480p.mov</string>
+					<key>poster_16_9</key>
+					<string>mad_max_16_9</string>
+					<key>poster_4_3</key>
+					<string>mad_max_4_3</string>
+					<key>title</key>
+					<string>Mad Max</string>
+					<key>lenght</key>
+					<integer>105</integer>
+				</dict>
+				<dict>
+					<key>mediaURL</key>
+					<string>http://movietrailers.apple.com/movies/paramount/ghost-in-the-shell/ghost-in-the-shell-trailer-1_480p.mov</string>
+					<key>poster_16_9</key>
+					<string>ghost_in_the_shell_16_9</string>
+					<key>poster_4_3</key>
+					<string>ghost_in_the_shell_4_3</string>
+					<key>title</key>
+					<string>Ghost In The Shell</string>
+					<key>lenght</key>
+					<integer>105</integer>
+				</dict>
+			</array>
 		</dict>
 	</array>
 </dict>
